--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 #body {
     display: grid;
-
+    
     width: 100vw;
     height: 100vh;
     grid-template-columns: 10% 30% 30% 30%;
@@ -23,11 +23,15 @@
 .header {
     grid-area: he;
     background-color: lightblue;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: url("/img/banner.jpg");
 
-    color: black;
+    color: blue;
 }
+
+
 
 .section1 {
     display: grid;
@@ -76,7 +80,10 @@
 .div1 {
     grid-area: d1;
     background-color:lightcoral;
-    text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .div2 {
@@ -187,3 +194,13 @@ top: 10px; right: 40px; */
 
 /* position: absolute;
 top: 12px; right: 40px; */
+
+.bakgrund {
+    background-color: white;
+    border: solid 3px black;
+}
+
+.boarder {
+    background: transparent;
+    border: solid 3px black
+}
